countdown/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countdown
  namespace: lenid
spec:
  selector:
    matchLabels:
      app: countdown
  template:
    metadata:
      labels:
        app: countdown
    spec:
      containers:
      - name: countdown
        image: yooooomi/easy-countdown
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
